# dicomgenerator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
dicomgenerator/: __init__.py  annotation.py  cli.py  dicom.py  exceptions.py  export.py  exporter.py  factory.py  generators.py  importer.py  logging.py  persistence.py  pixeldata.py  reader.py  settings.py  templates.py  tools.py
dicomgenerator/resources/: __init__.py
dicomgenerator/resources/templates/: ct_toshiba_aquilion.json  ct_toshiba_aquilion.txt
docs/: Makefile  conf.py  development.rst  index.rst  installation.rst  make.bat  usage.rst
examples/: collect_data_from_existing_dicom.py  example.py  example2.py  generate_dicom_data.py  generate_image_data.py  try.py
tests/: __init__.py  conftest.py  test_cli.py  test_dicom.py  test_dicomgenerator.py  test_factory.py  test_importer.py  test_persistence.py  test_pixeldata.py  test_reader.py  test_tools.py
tests/resources/: dcmfile1
