[tool.poetry]
name = "dicomgenerator"
version = "0.9.0"
description = "Generate pydicom datasets and data elements for use in testing"
authors = ["sjoerdk <sjoerd.kerkstra@radboudumc.nl>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/sjoerdk/dicomgenerator"
include = ["dicomgenerator/resources"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pydicom = "3.0.1"
numpy = "^1.23.4"
factory-boy = "^3.2.1"
click = "^8.1.3"
pytest-cov = "^5.0.0"
pillow = "^10.4.0"

[tool.poetry.scripts]
dicomgen = "dicomgenerator.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38, py39, py310
[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
allowlist_externals =
    poetry
commands =
    poetry install -v
    poetry run pytest --cov=tests/ --cov=dicomtrolley
"""
